Fix on mobile

--- a/src/assets/sass/base/typography.scss
+++ b/src/assets/sass/base/typography.scss
@@ -35,39 +35,63 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     font-weight: 600;
 }
 h1, .h1 {
-    font-size: 12vw;
+    font-size: 15vw;
     line-height: 1.1;
     color: var(--color-accent-1);
 }
 h2, .h2 {
-    font-size: 8vw;
+    font-size: 13vw;
     line-height: 1.25;
 }
 h3, .h3 {
-    font-size: 5vw;
+    font-size: 10vw;
     line-height: 1.3;
     font-weight: 500
 }
 h4, .h4 {
-    font-size: 3vw;
+    font-size: 8vw;
     line-height: 1.35;
     font-weight: 500
 }
 h5, .h5 {
-    font-size: 1.7vw;
+    font-size: 6vw;
     line-height: 1.4;
     font-weight: 500
 }
 h6, .h6 {
-    font-size: 1.5vw;
+    font-size: 4vw;
     line-height: 1.5;
     font-weight: 500
 }
 p {
+    font-size: 3vw;
     line-height: 1.75;
 }
 
-
 .line-parent, .word {
     overflow: hidden;
+}
+
+@media(min-width:767px) {
+    h1, .h1 {
+        font-size: 12vw
+    }
+    h2, .h2 {
+        font-size: 8vw
+    }
+    h3, .h3 {
+        font-size: 5vw
+    }
+    h4, .h4 {
+        font-size: 3vw
+    }
+    h5, .h5 {
+        font-size: 1.7vw
+    }
+    h6, .h6 {
+        font-size: 1.5vw
+    }
+    p {
+        font-size: 1vw
+    }
 }
