--- a/src/assets/sass/sections/hero.scss
+++ b/src/assets/sass/sections/hero.scss
@@ -1,5 +1,6 @@
 .hero-wrap {
     position: relative;
+    overflow: hidden
 }
 
 .hero-content {
